atlassian-confluence/confluence-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: atlassian-confluence
  namespace: atlassian
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    certmanager.k8s.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
  - host: confluence.k8s.eradahcapital.com
    http:
      paths:
      - path: /
        backend:
          serviceName: atlassian-confluence
          servicePort: 80
  tls:
  - secretName: confluence-production-tls
    hosts:
    - confluence.k8s.eradahcapital.com
